--- a/web/domain_app/trackie/templates/base.html
+++ b/web/domain_app/trackie/templates/base.html
@@ -40,7 +40,7 @@
                 </ul>
                 <form class="navbar-form navbar-left searchbar">
                     <div class="form-group position-relative">
-                        <input type="text" class="form-control searchbar-text" placeholder="Hľadať">
+                        <input type="text" class="form-control searchbar-text" placeholder="Hľadať...">
                         <button class="searchbar-button" type="submit"><i class="fa fa-search"></i></button>
                     </div>
                 </form>
@@ -83,13 +83,13 @@
                     </ul>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="author">
                 <div class="col-xs-12 text-center">Richard Rožár 2016</div>
             </div>
         </div>
     </footer>
     <link rel="stylesheet" href="{% static 'third-party/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'third-party/bootstrap/css/bootstrap-theme.min.css' %}">
+
     <link rel="stylesheet" href="{% static 'third-party/font-awesome/css/font-awesome.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'assets/trackie/css/bootstrap-trackie.css' %}">
