--- a/web/domain_app/trackie/static/assets/trackie/css/bootstrap-trackie.css
+++ b/web/domain_app/trackie/static/assets/trackie/css/bootstrap-trackie.css
@@ -1,3 +1,19 @@
+.navbar-inverse {
+    background-color: #000000;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > .active > a:hover {
+    background-color: #403d3d;
+}
+
+.navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
+     background-color: #403d3d;
+}
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
+    background-color: #403d3d;
+}
+
 .navbar-brand {
     padding: 10px 15px;
 }
