Finished home page for unregistered users

--- a/web/domain_app/trackie/templates/base.html
+++ b/web/domain_app/trackie/templates/base.html
@@ -59,27 +59,45 @@
         <div class="container-fluid">
              <div class="row">
                 <div class="col-xs-2">
-                    <u>Developer</u>
-                    <ul>
-                        <li>API</li>
-                        <li>Dokumentácia</li>
-                        <li>Status</li>
+                    <span class="bold-text underline-text">Developer</span>
+                    <ul class="footer-menu">
+                        <li>
+                            <a href="#" title="#">API</a>
+                        </li>
+                        <li>
+                            <a href="#" title="#">Dokumentácia</a>
+                        </li>
+                        <li>
+                            <a href="#" title="#">Status</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-xs-2">
-                    <u>Preteky</u>
-                    <ul>
-                        <li>Online</li>
-                        <li>Nadchádzajúce</li>
-                        <li>Ukončené</li>
+                   <span class="bold-text underline-text">Preteky</span>
+                    <ul class="footer-menu">
+                        <li>
+                            <a href="#" title="#">Online</a>
+                        </li>
+                        <li>
+                            <a href="#" title="#">Nadchádzajúce</a>
+                        </li>
+                        <li>
+                            <a href="#" title="#">Ukončené</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-xs-2">
-                    <u>Trackie</u>
-                    <ul>
-                        <li>O projekte</li>
-                        <li>O autorovi</li>
-                        <li>Novinky</li>
+                    <span class="bold-text underline-text">Trackie</span>
+                    <ul class="footer-menu">
+                        <li>
+                            <a href="#" title="#">O projekte</a>
+                        </li>
+                        <li>
+                            <a href="#" title="#">O autorovi</a>
+                        </li>
+                        <li>
+                            <a href="#" title="#">Novinky</a>
+                        </li>
                     </ul>
                 </div>
             </div>
