--- a/web/domain_app/trackie/templates/trackie/registered/home.html
+++ b/web/domain_app/trackie/templates/trackie/registered/home.html
@@ -1,3 +1,3 @@
-{% extends "base.html" %}
+{% extends "trackie/base.html" %}
 
-{% block content %}{% endblock %}
+{% block content %}LOGGED{% endblock %}
