--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -10,7 +10,7 @@
     {% block head %}{% endblock %}
 </head>
 <body class="sticky-body">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header" aria-expanded="false">
@@ -23,7 +23,7 @@
                     <img id="header-logo" alt="Trackie logo" src="{% static "assets/trackie/img/trackie_logo.svg" %}">
                 </a>
             </div>
-            <div class="collapse navbar-collapse" id="header">
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/"><span class="fa fa-home">&nbsp;</span>Domov</a></li>
                     <li class="dropdown">
@@ -107,6 +107,7 @@
         </div>
     </footer>
     <link rel="stylesheet" href="{% static 'third-party/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'third-party/simplex/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'third-party/font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'third-party/angular/angular-csp.css' %}">
 
