--- a/web/domain_app/trackie/templates/trackie/unregistered/home.html
+++ b/web/domain_app/trackie/templates/trackie/unregistered/home.html
@@ -17,15 +17,17 @@
             </div>
         </div>
         <div class="col-sm-5">
-            <form action="#" method="post" class="registration-form">
-                {% csrf_token %}
-                {% bootstrap_form form %}
-                {% buttons %}
-                    <button type="submit" class="btn btn-primary">
-                        Registrovať sa
-                    </button>
-                {% endbuttons %}
-            </form>
+            <div class="well">
+                <form action="#" method="post">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    {% buttons %}
+                        <button type="submit" class="btn btn-primary">
+                            Registrovať sa
+                        </button>
+                    {% endbuttons %}
+                </form>
+            </div>
         </div>
     </div>
 {% endblock %}
