--- a/web/domain_app/trackie/templates/trackie/unregistered/home.html
+++ b/web/domain_app/trackie/templates/trackie/unregistered/home.html
@@ -7,11 +7,11 @@
         <div class="col-sm-7">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <img src="{% static 'assets/trackie/img/cyclist.svg' %}" id="cyclist" alt="cyclist" />
+                    <img src="{% static 'assets/trackie/img/cyclist.svg' %}" class="cyclist" alt="cyclist" />
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 text-center" id="cyclist-text">
+                <div class="col-xs-12 text-center cyclist-text">
                     .find.watch.enjoy
                 </div>
             </div>
