Added djangoAuth service for AngularJS, unified template for users

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -121,6 +121,7 @@
     <script src="{% static 'third-party/angular-route/angular-route.min.js' %}"></script>
     <script src="{% static 'third-party/angular-sanitize/angular-sanitize.min.js' %}"></script>
     <script src="{% static 'third-party/angular-resource/angular-resource.min.js' %}"></script>
+    <script src="{% static 'third-party/angular-cookies/angular-cookies.min.js' %}"></script>
     <script src="{% static 'third-party/lodash/lodash.min.js' %}"></script>
     <script src="{% static 'third-party/restangular/restangular.min.js' %}"></script>
 
