--- a/web/domain_app/trackie/templates/trackie/home.html
+++ b/web/domain_app/trackie/templates/trackie/home.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 
 {% block content %}
-    <div class="row" data-ng-controller="mainController">
+    <div class="row" data-ng-controller="MainController">
         <div class="col-sm-7">
             <div class="row">
                 <div class="col-xs-12 text-center">
