Working log in/out, added login directive, changed /auth/login endpoint data structure

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -44,9 +44,7 @@
                         <button class="searchbar-button" type="submit"><i class="fa fa-search"></i></button>
                     </div>
                 </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="fa fa-sign-in"></span>&nbsp;Prihlásiť sa</a></li>
-                </ul>
+                <login-modal></login-modal>
             </div>
         </div>
     </nav>
