Enabled ngRoute, backend/frontend for (un)registered users

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <main class="sticky-content">
-        <div class="container-fluid" data-ng-cloak>
+        <div class="container-fluid" data-ng-cloak data-ng-view>
             {% block content %}{% endblock %}
         </div>
     </main>
