Redirect when user is not logged in

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -57,7 +57,7 @@
         <div class="container-fluid">
              <div class="row">
                 <div class="col-xs-2">
-                    <span class="bold-text underline-text">Developer</span>
+                    <span class="bold-text">Developer</span>
                     <ul class="footer-menu">
                         <li>
                             <a href="#" title="#">API</a>
@@ -71,7 +71,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-2">
-                   <span class="bold-text underline-text">Preteky</span>
+                   <span class="bold-text">Preteky</span>
                     <ul class="footer-menu">
                         <li>
                             <a href="#" title="#">Online</a>
@@ -85,7 +85,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-2">
-                    <span class="bold-text underline-text">Trackie</span>
+                    <span class="bold-text">Trackie</span>
                     <ul class="footer-menu">
                         <li>
                             <a href="#" title="#">O projekte</a>
