--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -19,18 +19,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="#/">
                     <img class="header-logo" alt="Trackie logo" src="{% static "assets/trackie/img/trackie_logo.svg" %}">
                 </a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/"><span class="fa fa-home">&nbsp;</span>Domov</a></li>
+                    <li class="active">
+                        <a href="">
+                            <span class="fa fa-home">&nbsp;</span>Domov
+                        </a>
+                    </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle"
-                           data-toggle="dropdown" role="button"
-                           aria-haspopup="true" aria-expanded="false"><span class="fa fa-bicycle"></span>&nbsp;Preteky
-                            <span class="caret"></span></a>
+                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="fa fa-bicycle"></span>&nbsp;Preteky
+                            <span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Online</a></li>
                             <li><a href="#">Nadchádzajúce</a></li>
@@ -41,7 +45,9 @@
                 <form class="navbar-form navbar-left searchbar">
                     <div class="form-group position-relative">
                         <input type="text" class="form-control searchbar-text" placeholder="Hľadať...">
-                        <button class="searchbar-button" type="submit"><i class="fa fa-search"></i></button>
+                        <button class="searchbar-button" type="submit">
+                            <i class="fa fa-search"></i>
+                        </button>
                     </div>
                 </form>
                 <login-modal></login-modal>
@@ -55,7 +61,7 @@
     </main>
     <footer>
         <div class="container-fluid">
-             <div class="row">
+            <div class="row">
                 <div class="col-xs-2">
                     <span class="bold-text">Developer</span>
                     <ul class="footer-menu">
