enabled html5Mode for angular, constants, 404, 405, trivia fixes

--- a/web/domain_app/trackie/templates/trackie/main/registered.html
+++ b/web/domain_app/trackie/templates/trackie/main/registered.html
@@ -1,1 +1,5 @@
-Welcome Back {{ user.username }}!
+<div class="row-">
+    <div class="col-xs-12">
+        Welcome back {{ user.username }}!
+    </div>
+</div>
