--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
     <title>{% block title %}Trackie{% endblock %}</title>
     {% block head %}{% endblock %}
 </head>
@@ -19,19 +20,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/">
+                <a class="navbar-brand" href="/">
                     <img class="header-logo" alt="Trackie logo" src="{% static "assets/trackie/img/trackie_logo.svg" %}">
                 </a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="">
+                        <a href="/">
                             <span class="fa fa-home">&nbsp;</span>Domov
                         </a>
                     </li>
                     <li class="dropdown">
-                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="fa fa-bicycle"></span>&nbsp;Preteky
                             <span class="caret"></span>
                         </a>
