--- a/web/domain_app/trackie/templates/trackie/main/unregistered.html
+++ b/web/domain_app/trackie/templates/trackie/main/unregistered.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load bootstrap3 %}
 
-<div class="row" data-ng-controller="MainController">
+<div class="row">
     <div class="col-sm-7">
         <div class="row">
             <div class="col-xs-12 text-center">
