--- a/web/domain_app/trackie/templates/partials/login.html
+++ b/web/domain_app/trackie/templates/partials/login.html
@@ -14,7 +14,7 @@
         <div class="modal-content">
             <form data-ng-submit="login(username, password)">
                 <div class="modal-body">
-                    <input type="hidden" value="RBHGASkPlwbAm5mPhZjSM5LChEOlzP6b" name="csrfmiddlewaretoken">
+                    {% csrf_token %}
                     <div class="form-group" id="non_field_errors"></div>
                     <div class="form-group">
                         <label for="username" class="control-label">Username</label>
