--- a/web/domain_app/trackie/templates/trackie/main/unregistered.html
+++ b/web/domain_app/trackie/templates/trackie/main/unregistered.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load bootstrap3 %}
 
 <div class="row">
     <div class="col-sm-7">
@@ -16,14 +15,18 @@
     </div>
     <div class="col-sm-5">
         <div class="well">
-            <form action="#" method="post">
+            <form name="registrationForm" data-ng-submit="register()">
                 {% csrf_token %}
-                {% bootstrap_form form %}
-                {% buttons %}
-                    <button type="submit" class="btn btn-primary">
-                        Registrovať sa
-                    </button>
-                {% endbuttons %}
+                <div class="form-group" id="non_field_errors"></div>
+                {% for field in form %}
+                    <div class="form-group">
+                    <label for="{{ field.id_for_label }}" class="control-label">{{ field.label }}</label>
+                    {{ field }}
+                    </div>
+                {% endfor %}
+                <div class="form-group">
+                   <button type="submit" ng-disabled="registrationForm.$invalid" class="btn btn-primary">Registrovať sa</button>
+                </div>
             </form>
         </div>
     </div>
