Frontend validation indicator for login

--- a/web/domain_app/trackie/templates/partials/login.html
+++ b/web/domain_app/trackie/templates/partials/login.html
@@ -12,21 +12,21 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form data-ng-submit="login(username, password)">
+            <form data-ng-submit="login(username, password)" name="loginForm">
                 <div class="modal-body">
                     {% csrf_token %}
                     <div class="form-group" id="non_field_errors"></div>
-                    <div class="form-group">
+                    <div class="form-group" data-ng-class="{ 'has-error' : loginForm.username.$invalid && !loginForm.username.$pristine, 'has-success' : loginForm.username.$valid && !loginForm.username.$pristine }">
                         <label for="username" class="control-label">Username</label>
                         <input type="text" data-ng-model="username" required="required" placeholder="Username" name="username" maxlength="30" id="username" class="form-control">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" data-ng-class="{ 'has-error' : loginForm.password.$invalid && !loginForm.password.$pristine, 'has-success' : loginForm.password.$valid && !loginForm.password.$pristine }">
                         <label for="password" class="control-label">Password</label>
                         <input type="password" data-ng-model="password" required="required" placeholder="Password" name="password" id="password" class="form-control">
                     </div>
                     <div class="form-group">
                         <button type="button" class="btn btn-default" onClick="event.preventDefault(); $('#login-modal').removeClass('in').hide(); $('#login-modal-backdrop').fadeOut().removeClass('in');">Zavrieť</button>
-                        <button type="submit" class="btn btn-primary">Prihlásiť sa</button>
+                        <button type="submit" data-ng-disabled="loginForm.$invalid" class="btn btn-primary">Prihlásiť sa</button>
                     </div>
                 </div>
             </form>
