--- a/web/domain_app/trackie/templates/trackie/main/unregistered.html
+++ b/web/domain_app/trackie/templates/trackie/main/unregistered.html
@@ -21,14 +21,14 @@
                 <div class="form-group" id="non_field_errors"></div>
                 {% for field in form %}
                     {% with model_name=field.field.widget.attrs|get_item:'data-ng-model' %}
-                    <div class="form-group" ng-class="{ 'has-error' : registrationForm.{{ model_name }}.$invalid && !registrationForm.{{ model_name }}.$pristine, 'has-success' : registrationForm.{{ model_name }}.$valid && !registrationForm.{{ model_name }}.$pristine }">
+                    <div class="form-group" data-ng-class="{ 'has-error' : registrationForm.{{ model_name }}.$invalid && !registrationForm.{{ model_name }}.$pristine, 'has-success' : registrationForm.{{ model_name }}.$valid && !registrationForm.{{ model_name }}.$pristine }">
                         <label for="{{ field.id_for_label }}" class="control-label">{{ field.label }}</label>
                         {{ field }}
                     </div>
                     {% endwith %}
                 {% endfor %}
                 <div class="form-group">
-                   <button type="submit" ng-disabled="registrationForm.$invalid" class="btn btn-primary">Registrovať sa</button>
+                   <button type="submit" data-ng-disabled="registrationForm.$invalid" class="btn btn-primary">Registrovať sa</button>
                 </div>
             </form>
         </div>
