--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -130,6 +130,7 @@
     <script src="{% static 'third-party/lodash/lodash.min.js' %}"></script>
     <script src="{% static 'third-party/restangular/restangular.min.js' %}"></script>
 
+    <script src="{% static 'assets/trackie/js/helpers.js' %}"></script>
     <script src="{% static 'assets/trackie/js/angular_modules/trackie.js' %}"></script>
     {% block footer %}{% endblock %}
 </body>
