flash messages, trivia fixes

--- a/web/domain_app/trackie/templates/trackie/main/registered.html
+++ b/web/domain_app/trackie/templates/trackie/main/registered.html
@@ -1,4 +1,5 @@
-<div class="row-">
+{% include "trackie/flash.html" %}
+<div class="row">
     <div class="col-xs-12">
         Welcome back {{ user.username }}!
     </div>
