--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -37,7 +37,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/map">Online</a></li>
+                            <li><a href="#/map">Online</a></li>
                             <li><a href="#">Nadchádzajúce</a></li>
                             <li><a href="#">Ukončené</a></li>
                         </ul>
@@ -81,7 +81,7 @@
                    <span class="bold-text">Preteky</span>
                     <ul class="footer-menu">
                         <li>
-                            <a href="/map" title="#">Online</a>
+                            <a href="map" title="#">Online</a>
                         </li>
                         <li>
                             <a href="#" title="#">Nadchádzajúce</a>
