--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -1,24 +1,10 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'third-party/openlayers/ol.css' %}">
-<script src="{% static 'third-party/openlayers/ol.js' %}"></script>
+
 
 <div class="row">
   <div class="col-xs-12">
     <div id="map" class="map"></div>
-      <script type="text/javascript">
-        var map = new ol.Map({
-          target: 'map',
-          layers: [
-            new ol.layer.Tile({
-              source: new ol.source.OSM()
-            })
-          ],
-          view: new ol.View({
-            center: ol.proj.fromLonLat([37.41, 8.82]),
-            zoom: 4
-          })
-        });
-      </script>
+      <script src="{% static 'assets/trackie/js/map.js' %}"></script>
   </div>
 </div>
