Fixed problem woth Angular Route and anchors with #

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -27,19 +27,19 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="/">
+                        <a target="_self" href="#/">
                             <span class="fa fa-home">&nbsp;</span>Domov
                         </a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <a target="_self" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="fa fa-bicycle"></span>&nbsp;Preteky
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#/map">Online</a></li>
-                            <li><a href="#">Nadchádzajúce</a></li>
-                            <li><a href="#">Ukončené</a></li>
+                            <li><a target="_self" href="#/map">Online</a></li>
+                            <li><a target="_self" href="#">Nadchádzajúce</a></li>
+                            <li><a target="_self" href="#">Ukončené</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -67,13 +67,13 @@
                     <span class="bold-text">Developer</span>
                     <ul class="footer-menu">
                         <li>
-                            <a href="#" title="#">API</a>
+                            <a target="_self" href="#" title="#">API</a>
                         </li>
                         <li>
-                            <a href="#" title="#">Dokumentácia</a>
+                            <a target="_self" href="#" title="#">Dokumentácia</a>
                         </li>
                         <li>
-                            <a href="#" title="#">Status</a>
+                            <a target="_self" href="#" title="#">Status</a>
                         </li>
                     </ul>
                 </div>
@@ -81,13 +81,13 @@
                    <span class="bold-text">Preteky</span>
                     <ul class="footer-menu">
                         <li>
-                            <a href="map" title="#">Online</a>
+                            <a target="_self" href="#/map" title="#">Online</a>
                         </li>
                         <li>
-                            <a href="#" title="#">Nadchádzajúce</a>
+                            <a target="_self" href="#" title="#">Nadchádzajúce</a>
                         </li>
                         <li>
-                            <a href="#" title="#">Ukončené</a>
+                            <a target="_self" href="#" title="#">Ukončené</a>
                         </li>
                     </ul>
                 </div>
@@ -95,13 +95,13 @@
                     <span class="bold-text">Trackie</span>
                     <ul class="footer-menu">
                         <li>
-                            <a href="#" title="#">O projekte</a>
+                            <a target="_self" href="#" title="#">O projekte</a>
                         </li>
                         <li>
-                            <a href="#" title="#">O autorovi</a>
+                            <a target="_self" href="#" title="#">O autorovi</a>
                         </li>
                         <li>
-                            <a href="#" title="#">Novinky</a>
+                            <a target="_self" href="#" title="#">Novinky</a>
                         </li>
                     </ul>
                 </div>
