--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -1,10 +1,9 @@
 {% load static %}
 
-
-
 <div class="row">
-  <div class="col-xs-12">
-    <div id="map" class="map"></div>
-      <script src="{% static 'assets/trackie/js/map.js' %}"></script>
-  </div>
+    <div class="col-xs-12">
+        <script src="{% static 'assets/trackie/js/map.js' %}"></script>
+        <div id="map" class="map"></div>
+    </div>
+    <div class="col-xs-12">{$ race.name $}</div>
 </div>
