--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -1,16 +1,19 @@
 {% load static %}
 
+{% verbatim %}
 <div class="row" data-ng-show="race">
     <div class="col-xs-12">
-        <h3 style="margin-top:0;">{$ race.name $}</h3>
-        <a data-ng-href="#/race-type/{$ race.type.slug $}" target="_self">{$ race.type.name $}</a> -
-        <a data-ng-href="#/tournament/{$ race.tournament.slug $}" target="_self">{$ race.tournament.name $}</a> -
-        <a data-ng-href="#/sport/{$ race.tournament.sport.slug $}" target="_self">{$ race.tournament.sport.name $}</a>
+        <h3 style="margin-top:0;">{{ race.name }}</h3>
+        <a data-ng-href="#/race-type/{{ race.type.slug }}" target="_self">{{ race.type.name }}</a> -
+        <a data-ng-href="#/tournament/{{ race.tournament.slug }}" target="_self">{{ race.tournament.name }}</a> -
+        <a data-ng-href="#/sport/{{ race.tournament.sport.slug }}" target="_self">{{ race.tournament.sport.name }}</a>
     </div>
 </div>
 <div class="row" data-ng-show="race">
     <div class="col-xs-12">
+{% endverbatim %}
         <script src="{% static 'assets/trackie/js/map.js' %}"></script>
         <div id="map" class="map" style="max-height: 500px;"></div>
     </div>
 </div>
+
