--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -16,4 +16,8 @@
         <div id="map" class="map" style="max-height: 500px;"></div>
     </div>
 </div>
-
+<div class="row">
+    <div class="col-xs-12">
+        <div ui-grid="gridOptions" class="grid"></div>
+    </div>
+</div>
