--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -130,6 +130,7 @@
     <script src="{% static 'third-party/angular-cookies/angular-cookies.min.js' %}"></script>
     <script src="{% static 'third-party/angular-touch/angular-touch.min.js' %}"></script>
     <script src="{% static 'third-party/angular-animate/angular-animate.min.js' %}"></script>
+    <script src="{% static 'third-party/angular-base64-upload/angular-base64-upload.js' %}"></script>
     <script src="{% static 'third-party/lodash/lodash.min.js' %}"></script>
     <script src="{% static 'third-party/restangular/restangular.min.js' %}"></script>
     <script src="{% static 'third-party/angular-ui-grid/ui-grid.min.js' %}"></script>
