--- a/web/domain_app/trackie/templates/partials/login.html
+++ b/web/domain_app/trackie/templates/partials/login.html
@@ -1,14 +1,14 @@
 <ul class="nav navbar-nav navbar-right">
     <li data-ng-if="!djangoAuth.authenticated">
-        <a href="#" onClick="event.preventDefault(); $('#login-modal').show().addClass('in'); $('#login-modal-backdrop').show().addClass('in');"><span class="fa fa-sign-in"></span>&nbsp;Prihlásiť sa</a>
+        <a href="#" target="_self" onClick="event.preventDefault(); $('#login-modal').show().addClass('in'); $('#login-modal-backdrop').show().addClass('in');"><span class="fa fa-sign-in"></span>&nbsp;Prihlásiť sa</a>
     </li>
     <li data-ng-if="djangoAuth.authenticated">
         {% verbatim %}
-        <a href="#/profile"><b>{{ djangoAuth.user.username }}</b></a>
+        <a href="#/profile" target="_self"><b>{{ djangoAuth.user.username }}</b></a>
         {% endverbatim %}
     </li>
     <li data-ng-if="djangoAuth.authenticated">
-        <a href="#" data-ng-click="logout()"><span class="fa fa-sign-in"></span>&nbsp;Odhlásiť sa</a>
+        <a href="#" target="_self" data-ng-click="logout()"><span class="fa fa-sign-in"></span>&nbsp;Odhlásiť sa</a>
     </li>
 </ul>
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog">
