--- a/web/domain_app/trackie/templates/partials/track/create.html
+++ b/web/domain_app/trackie/templates/partials/track/create.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-md-6">
         <div class="well">
             {% with form_name="trackForm" %}
             <form name="{{ form_name }}" id="track-form" data-ng-submit="createTrack()">
