Fixed missing .js for OL library

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -134,7 +134,7 @@
     <script src="{% static 'third-party/lodash/lodash.min.js' %}"></script>
     <script src="{% static 'third-party/restangular/restangular.min.js' %}"></script>
     <script src="{% static 'third-party/angular-ui-grid/ui-grid.min.js' %}"></script>
-    <script src="{% static 'third-party/openlayers/ol' %}"></script>
+    <script src="{% static 'third-party/openlayers/ol.js' %}"></script>
     <script src="{% static 'third-party/turf/turf.min.js' %}"></script>
 
     <script src="{% static 'assets/trackie/js/helpers.js' %}"></script>
